--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>{{ topic.name }}</title>
+    <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7917556/6383572/css/fonts.css" />
     <script src="{{ url_for('static', filename='bundles/bundle.js') }}"></script>
     <style>
       @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css);
